fix some  layout problem

--- a/app/assets/stylesheets/application/code.scss
+++ b/app/assets/stylesheets/application/code.scss
@@ -1,9 +1,9 @@
 .code-editor{
-  width: 100%;height: 700px; border: #EEE 2px solid; margin: 0 auto;  border-left: #EEE 1px solid; 
+  width: 100%;height: 700px; border: #EEE 2px solid; margin: 0 auto;  border-left: #EEE 1px solid; border-right: #EEE 1px solid;
   
   
   .toolbar{
-    height: 40px; border-bottom: #EEE 1px solid; padding:0 10px; line-height: 40px;
+    height: 40px; border-bottom: #EEE 1px solid; padding:0 5px; line-height: 40px;
     & > a{
        cursor: pointer;  text-decoration: none; margin-right: 5px;
       &:visited, &:link{color: #BBB}
@@ -13,6 +13,11 @@
       }
     }
     .tx{width: 20px; height: 20px; border-radius: 100%; margin-right: 5px;}
+
+    .fold-btn{
+      cursor: pointer; color: #B9B9B9;
+      &.right{margin-top: 13px;}
+    }
   }
   .p1, .p2, .p3, .p4{
     float: left;position: relative;  -webkit-user-select: none; -moz-user-select: none; -khtml-user-select: none;  
